# structural-coherence

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  structure-as-coherence-maintenance.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
experiments/RFC-002-epsilon-operationalization/: README.md
experiments/RFC-002-semantic-layer-text-to-sql/: .env.example  .gitignore  README.md  pyproject.toml
experiments/RFC-002-semantic-layer-text-to-sql/data/: README.md
experiments/RFC-002-semantic-layer-text-to-sql/results/: RESULTS.md
experiments/RFC-002-semantic-layer-text-to-sql/results/figures/: README.md
experiments/RFC-002-semantic-layer-text-to-sql/src/: README.md
experiments/RFC-002-semantic-layer-text-to-sql/src/rfc002_semantic_layer/: __init__.py
experiments/RFC-002-semantic-layer-text-to-sql/tests/: test_package.py
experiments/RFC-003-enrichment-noise-amplification/: README.md
experiments/RFC-003-epsilon-operationalization/: README.md
experiments/RFC-003-leverage-phase-boundary/: README.md
experiments/RFC-004-agentic-memory-horizon/: README.md  prior-art.md
experiments/RFC-004-leverage-phase-boundary/: README.md
experiments/RFC-004-scaling-exponents/: README.md
experiments/RFC-005-enrichment-noise-amplification/: README.md
experiments/RFC-005-scaling-exponents/: README.md
experiments/RFC-005-typescript-migration-gradient/: README.md
experiments/RFC-006-enrichment-noise-amplification/: README.md
proposals/: INDEX.md  RFC-001-resonance-structure-coherence.md  RFC-002-semantic-layer-text-to-sql.md
(+70 files in other folders)
