[project]
name = "rfc002-semantic-layer-text-to-sql"
version = "0.1.0"
description = "RFC-002: semantic-layer text-to-SQL experiment (RFC-001 program). Tooling skeleton only — no pipeline logic until the RFC is frozen."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.1",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
# TODO(RFC-002 freeze): populate once the source warehouse / DB engine is decided
# (e.g. ClickHouse, per the Rumiantsau & Fokeev 2026 prior-art anchor cited in the RFC).
db = []
# TODO(RFC-002 freeze): populate once model providers/SDKs under test and judge
# configuration are decided (e.g. openai, anthropic).
llm = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rfc002_semantic_layer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
